--- a/python/.vscode/settings.json
+++ b/python/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/usr/bin/python3"
+    "python.pythonPath": "C:\\Users\\12404\\miniconda3\\envs\\cython-dev\\python.exe"
 }
